# TextureFusion

./: BasicAPI.cpp  BasicAPI.h  CMakeLists.txt  README.md  main.cpp  settings.yaml
CMake/: FindEigen3.cmake  FindFreeNect2.cmake  FindMapMap.cmake  FindOpenNI2.cmake  FindRadical.cmake  FindRealSense2.cmake  FindSophus.cmake  FindSuiteSparse.cmake
GCFusion/: MapMaintain.hpp  MobileFusion.cpp  MobileFusion.h  MobileGUI.hpp
GCSLAM/: GCSLAM.cpp  MultiViewGeometry.cpp  frame.h
GCSLAM/ORBSLAM/: ORBextractor.cpp
Params/: ps1080.crf  ps1080.vgn
Shaders/: color.glsl  draw_mesh.frag  draw_mesh.vert  draw_triangles.frag
Structure/: Atlas.cpp  Atlas.h  Chisel.cpp  Chisel.h  ChunkManager.cpp  ChunkManager.h  Patch.cpp  Patch.h  TexMap.cpp  TexMap.h  sparse_matrix.cpp  sparse_matrix.h  uni_graph.cpp  uni_graph.h
Tools/: CMakeLists.txt  DatasetWrapper.hpp  Wrapper.h  config.h  config.h.in
Tools/Kinect/: KinectWrapper.hpp
Tools/OpenNI2/: OpenNI2Interface.cpp  OpenNI2Interface.h  OpenNI2Wrapper.hpp
Tools/RealSense/: RealSenseWrapper.hpp
